# astrum

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  luadoc.json  result  shell.nix  shelltest.nix  wow.txt
.github/workflows/: mdbook.yml
docs/: README.md  book.toml  build.zig  json_defines.zig  last_updated.txt  main.zig  ndg.toml  options.json  utils.zig
docs/main/: README.md  SUMMARY.md  manual_summary.md
docs/main/advanced_subscription/: calls.md  keybinds.md  main.md
docs/main/auto_gen/: init.md
docs/main/auto_gen/animations/: init.md
docs/main/auto_gen/services/: init.md
docs/main/auto_gen/style/: init.md  misc.md
docs/main/auto_gen/subscriptions/: init.md
docs/main/auto_gen/utils/: init.md
docs/main/auto_gen/widgets/: init.md  misc.md  models.md
docs/main/introduction/: animations.md  installation.md  main.md  styling.md  subscriptions.md
docs/main/subscriptions/: hyprland.md  main.md
docs/main/widgets/: main.md
docs/ndg_output/: astrum.html  index.html  options.html  search.html
docs/ndg_output/assets/: search-data.json
docs/src/: json_defines.zig  main.zig  utils.zig
docs/src/doc_out/: doc.json  doc.md
docs/test/: astrum.md
niri_ipc/: Cargo.toml
src/: main  main.rs
src/animations/: mod.rs
src/app/: mod.rs  window.rs
src/astrum_binds/: README.md  mod.rs
src/astrum_binds/style/: button.rs  container.rs  mod.rs  text.rs  text_input.rs
src/astrum_binds/widgets/: button.rs  centerbox.rs  column.rs  container.rs  context_menu.rs  icon.rs  image.rs  menu.rs  mod.rs  mouse_area.rs  row.rs  scrollable.rs  slider.rs  space.rs  stack.rs  text.rs  text_input.rs  tree.rs
src/astrum_binds/widgets/custom/: centerbox.rs  mod.rs
src/astrum_core/: README.md  mod.rs
src/astrum_core/animations/: mod.rs
src/astrum_core/app/: main.rs  mod.rs  window.rs
src/astrum_core/lua_context/: mod.rs
src/astrum_core/lua_context/binds/: animations.rs  applications.rs  calls.rs  greetd.rs  hyprland.rs  mod.rs  mpris.rs  niri.rs  styling.rs  windows.rs
src/astrum_core/services/: applications.rs  calls.rs  greetd.rs  hyprland.rs  keybinds.rs  live_reloading.rs  mod.rs  mpris.rs  notifcations.rs  system_tray.rs  time.rs
src/config/: lua.rs  mod.rs
src/lua/: test.lua
src/lua/astrum/: init.lua
src/lua/astrum/helper/: init.lua
src/lua/astrum/types/: init.lua  misc.lua
src/lua_library/: README.md
src/lua_library/astrum/: init.lua
src/lua_library/astrum/helper/: README.md  init.lua
src/lua_library/astrum/types/: init.lua
src/services/: applications.rs  calls.rs  hot_reload.rs  hyprland.rs  mod.rs  mpris.rs  niri.rs  system_tray.rs  time.rs
src/style/: application.rs  button.rs  container.rs  mod.rs  text.rs  text_input.rs
src/widgets/: button.rs  centerbox.rs  column.rs  container.rs  icon.rs  image.rs  mod.rs  row.rs  scrollable.rs  space.rs  text.rs  text_input.rs
src/widgets/custom/: button.rs  centerbox.rs  mod.rs
(+20 files in other folders)
