[package]
name = "astrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.iced]
git = "https://github.com/pop-os/iced"
default-features = false
features = ["tokio", "wayland", "advanced", "wgpu"]


[dependencies]
wayland-client = "0.31.3"
wayland-protocols = { version = "0.32.1", features = ["client", "unstable"] }


# system dependencies:
# xkbcommon - for keyboard support i think
