[package]
name = "astrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = { git = "https://github.com/MalpenZibo/hyprland-rs", branch="master" }
# hyprland = "0.3.13"
# hyprland =
# hyprland = "0.3.13"
mpris = "2.0.1"
tokio = { version = "1", features = ["full"] }
ini = "1.3.0"
walkdir = "2.4.0"
simple-home-dir = "0.3.5"
mlua = { version = "0.9.9", features = ["luajit", "unstable"] }
anyhow = "1.0.86"
lazy_static = "1.5.0"
clap = { version = "4.5.10", features = ["derive"] }
notify = "6.1.1"
lilt = "0.7.0"
color-print = "0.3.6"
system-tray = "0.2.0"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "tokio",
    "wayland",
    "wgpu", # IMPORTANT: enable when hyprland fixed the vulkan thingy
    "multi-window"

]

[dependencies.niri-ipc]
path = "./niri_ipc"
