[package]
name = "niri-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"], optional = true }
schemars = { version = "0.8.21", optional = true }

[features]
clap = ["dep:clap"]
json-schema = ["dep:schemars"]
